[package]
name = "raydium-cp-swap"
version = "0.1.1"  # Increment to differentiate your fork
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }  # Latest compatible with solana 2.2.x
anchor-spl = { version = "0.30.1", features = ["metadata"] }  # Match anchor-lang
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }  # Update to match solana 2.2.x
spl-math = { version = "0.2", features = ["no-entrypoint"] }  # No update needed
spl-memo = "6.0.0"  # Update to match solana 2.2.x
uint = "0.9.1"  # No conflict
solana-security-txt = "1.1.1"  # No conflict
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }  # Match your bot
arrayref = { version = "0.3.6" }  # No conflict
borsh = "1.5.7"  # Add to match your bot, often used with solana-sdk

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
